--- a/ch10.md
+++ b/ch10.md
@@ -909,4 +909,4 @@ top5.each{|count, url| puts "#{count} #{url}" }                   # 5
 
 | 上一章                            | 目录                            | 下一章                   |
 | --------------------------------- | ------------------------------- | ------------------------ |
-| [第三部分：派生数据](part-iii.md) | [设计数据密集型应用](README.md) | [第十章：流处理](ch7.md) |
+| [第三部分：派生数据](part-iii.md) | [设计数据密集型应用](README.md) | [第十一章：流处理](ch11.md) |
